--- a/Day-22/cal2/index.html
+++ b/Day-22/cal2/index.html
@@ -5,28 +5,40 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+
+        <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
 
-        <input type="text" name="" id="val">
-        <button value="C">clear</button>
-        <br><br>
-        <button value="1">1</button>
-        <button value="2">2</button>
-        <button value="3">3</button>
-        <button value="4">4</button>
-        <button value="5">5</button>
-        <button value="6">6</button>
-        <button value="7">7</button>
-        <button value="8">8</button>
-        <button value="9">9</button>
-        <button value="0">0</button>
-        <button value="+">+</button>
-        <button value="-">-</button>
-        <button value="*">*</button>
-        <button value="/">/</button>
-        <button value="=">=</button>
+
+        <div class="m-auto mt-5 w-80 border-2 p-5 bg-purple-900	 ">
+                <div class="w-full mb-6 ">
+                        <input type="text" name="" id="val"
+                                class="bg-pink-500 bg-opacity-60 w-56 h-10  border-2 text-white rounded-md">
+                        <button value="C"
+                                class="text-red-500 border-2 w-9 h-10 border-red-500 rounded-md hover:text-white hover:bg-red-500 ">X</button>
+                </div>
+                <button value="1" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">1</button>
+                <button value="2" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">2</button>
+                <button value="3" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">3</button>
+                <button value="4" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">4</button>
+                <button value="5" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">5</button>
+                <button value="6" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">6</button>
+                <button value="7" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">7</button>
+                <button value="8" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">8</button>
+                <button value="9" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">9</button>
+                <button value="0" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">0</button>
+                <button value="+" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">+</button>
+                <button value="-" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">-</button>
+                <button value="*" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">*</button>
+                <button value="/" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">/</button>
+                <button value="=" class="h-12 w-12 bg-pink-300	 rounded-full mx-5 border-2 my-1">=</button>
+
+
+
+        </div>
 
         <script src="index.js"></script>
 
