--- a/Day-27/Modal box/index.html
+++ b/Day-27/Modal box/index.html
@@ -9,11 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
                 integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
                 crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <style>
-                a {
-                        background-color: #ed1e7966;
-                }
-        </style>
+
 
 </head>
 
@@ -26,7 +22,7 @@
 
         </div>
         <div class="w-5/12 shadow-[0px_0px_10px_10px_rgba(255,255,255,0.2)] border-2 p-5 mx-auto my-20 hidden  rounded-3xl text-white absolute top-0 left-96"
-                id="Mbox">
+                id="Mbox" style="display: none;">
                 <div class="flex items-center  h-14 justify-between my-2">
                         <h1 class="text-2xl ">Modal box</h1>
                         <button><i class="fa fa-close " id="btn"></i></button>
