--- a/Webstie/login.html
+++ b/Webstie/login.html
@@ -5,19 +5,69 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+                integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+                crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+        <header id="header2"
+                class=" lg:h-16 bg-[#2874f0] text-white w-full flex items-center justify-evenly  p-3 sm:justify-between">
 
-        <form action="" id="form">
-                <input type="email" placeholder="Enter Email" id="em">
-                <input type="password" placeholder="Enter PassWord" id="pas">
-                <button>submit</button>
 
-        </form>
+        </header>
+
+
+        <section class="flex w-full h-[32rem] my-5">
+                <div class="w-8/12 flex  bg-white my-2 mx-auto shadow-md">
+                        <div class="sm:hidden w-[25rem] lg:inline  bg-[#2874f0]">
+                                <div class=" flex flex-col h-full w-full  justify-between items-center ">
+                                        <div class="w-full  p-7   h-52 ">
+                                                <h2 class="text-white text-[28px] font-bold">Login
+                                                </h2>
+                                                <h4 class="my-3 text-[#dbdbdb] text-lg">Get access to your Orders,
+                                                        Wishlist and Recommendations
+                                                </h4>
+                                        </div>
+                                        <div class="h-40 w-full flex items-center justify-evenly">
+                                                <img src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/login_img_c4a81e.png"
+                                                        alt="" class="">
+                                        </div>
+                                </div>
+                        </div>
+                        <form action="" id="form" class=" w-9/12  flex justify-between items-center flex-col">
+                                <div class="flex flex-col  h-[26rem]  items-center p-4 ">
+                                        <input type="email" placeholder="Enter Email"
+                                                class="shadow sm:w-full lg:w-11/12  my-3  px-2 py-1" id="em">
+                                        <input type="password" placeholder="Enter PassWord"
+                                                class="shadow  sm:w-full lg:w-11/12 my-3  px-2 py-1" id="pas">
+
+                                        <p class="text-[#717478] text-[12px] my-3">By continuing, you agree to
+                                                Flipkart's <span class="text-[#2874f0]">Terms of Use</span> and
+                                                <span class="text-[#2874f0]">Privacy
+                                                        Policy.</span>
+                                        </p>
+                                        <button
+                                                class="sm:w-full lg:w-11/12 h-10 text-white text-md font-bold bg-[#fb641b] my-3">Submit</button>
+
+
+                                </div>
+                                <a href="sign up.html"
+                                        class="lg:w-full mt-5 p-2 h-10  text-center my-2  text-[#2874f0] font-bold">New
+                                        to Flipkart? Create an account</a>
+                        </form>
+                </div>
+        </section>
+
+        <footer id="footer" class="bg-[#212121] text-white  pt-5 relative border-2  "></footer>
+
+
 
 </body>
+<script src="header&footer.js"></script>
 <script src="login.js"></script>
 
 </html>
