--- a/Weather API/index.html
+++ b/Weather API/index.html
@@ -6,26 +6,52 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+                integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+                crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 
 
-        <div class="w-7/12 m-auto h-96 mt-10 flex flex-col justify-evenly">
-                <h1 class="text-2xl font-bold text-center mt-4">Weather Application</h1>
-                <div class="w-7/12  h-14 flex items-center justify-evenly m-auto mt-5">
-                        <input type="search" class="border-2 rounded-lg border-blue-800 h-8 w-9/12 px-3"
-                                placeholder="Enter City Name">
-                        <button
-                                class="p-1 w-20 border-2 border-blue-800 hover:bg-blue-800 hover:text-white">Search</button>
+        <div
+                class=" border lg:w-[26rem] sm:w-full m-auto h-[34rem] mt-6 flex flex-col items-center justify-evenly   bg-gradient-to-t from-[#56628e] to-[#0bebb5]">
+                <h1 class="text-2xl font-bold text-white text-center mt-4">Weather Application</h1>
+
+                <div class="  w-full px-4  h-14  flex items-center justify-evenly m-auto mt-5">
+                        <input type="search" class="rounded-full  h-8 w-10/12 px-4" placeholder="Enter City Name">
+                        <button class="px-2 py-1 w-8 rounded-full bg-white "><i
+                                        class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
-                <div id="weather" class=" hover:shadow-2xl h-60 flex items-center justify-evenly w-8/12 p-3 m-auto">
-                        <div class=" h-full w-7/12 m-auto flex  flex-col justify-evenly ">
-                                <h2 id="city" class="text-xl capitalize"></h2>
-                                <p id="temp" class="text-xl capitalize"></p>
-                                <h2 id="dis" class="text-xl capitalize"></h2>
+                <div id="weather" class="     h-[25rem] flex items-center flex-col  w-11/12 p-1 mx-auto">
+                        <div id="icon" class="   w-7/12 flex items-center justify-evenly "></div>
+                        <div id="temps" class="  text-xl capitalize  text-white w-full text-center p-3">
+                                <p id="temp" class="text-5xl font-bold"></p>
+                                <h2 id="city" class="text-4xl capitalize  mt-3"></h2>
                         </div>
-                        <div id="icon" class=" w-4/12 flex items-center justify-evenly h-40"></div>
+
+                        <div class="    w-full m-auto flex  p-2 justify-evenly text-white ">
+                                <div class="w-1/2 h-full flex justify-evenly">
+                                        <div class="w-1/3  h-full flex items-center justify-evenly p-2"><img
+                                                        src="img/haze.png" alt=""></div>
+                                        <div class="w-2/3 p-2  h-full flex  justify-evenly flex-col">
+                                                <h2 id="hm" class="text-2xl"></h2>
+                                                <span class="capitalize">Humidity</span>
+                                        </div>
+
+                                </div>
+                                <div class="w-1/2  h-full flex justify-evenly">
+                                        <div class="w-1/3  h-full flex items-center justify-evenly p-2"><img
+                                                        src="img/wind.png" alt=""></div>
+                                        <div class="w-2/3 p-2  h-full flex  justify-evenly flex-col">
+                                                <h2 id="ws" class="text-2xl"></h2>
+                                                <span class="capitalize">wind speed</span>
+                                        </div>
+
+
+                                </div>
+
+                        </div>
 
                 </div>
         </div>
